fixing time form vertical alignment + making form/fieldset/legend browser behavior more consistent

--- a/client/src/page.css
+++ b/client/src/page.css
@@ -15,7 +15,7 @@ img {
   color: #7f8c8d;
 }
 
-input {
+input, select {
   font-family: inherit;
   font-size: inherit;
 }
